substrate/frame/support/test/tests/storage_alias_ui/prefix_must_be_an_ident.stderr
error: `_` is not allowed as prefix by `storage_alias`.
  --> tests/storage_alias_ui/prefix_must_be_an_ident.rs:19:34
   |
19 | type NoUnderscore = StorageValue<_, u32>;
   |                                  ^
